--- a/Jupyter_scripts/Parse_data.ipynb
+++ b/Jupyter_scripts/Parse_data.ipynb
@@ -35,12 +35,12 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "def main():\n",
-    "    filename = '/home/sommema4/git/Strip_detectors/Data/strip_data.log' # write the path to datalog\n",
+    "    filename = '/home/sommema4/git/Strip_detectors/Data/strip_data.log' # write path to datalog\n",
     "    basename = os.path.basename(filename)\n",
     "    print(basename)\n",
     "    \n",
     "    layers = read_data(filename) # read data into list od DatFrames\n",
-    "    [top, second, third, bottom] = layers # now you can access the induvidual layers by its name (unzips to list called layers)\n",
+    "    [top, second, third, bottom] = layers # now you can access the induvidual layers by its name (unzips the list called layers)\n",
     "    \n",
     "    top = particles(top) # run function particles on the top layer\n",
     "    \n",
@@ -82,7 +82,7 @@
     "    Auxiliary function for function particle\n",
     "    '''\n",
     "    \n",
-    "    dat = row[row != 0] # remove zeros strips\n",
+    "    dat = row[row != 0] # remove zero strips\n",
     "    out = len(dat) # get number of clusters\n",
     "    return out\n",
     "\n",
