--- a/Jupyter_scripts/Parse_muons.ipynb
+++ b/Jupyter_scripts/Parse_muons.ipynb
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = '/storage/experiments/2019/10_musala/ph32/log/tm_129_2_1570993037.log' # \n",
+    "filename = '/storage/experiments/2019/10_musala/ph32/log/tm_129_2_1570993037.log' \n",
     "log = pd.read_csv(filename,header=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -468,6 +468,20 @@
     "    print(log.iloc[record,1])\n",
     "    ph32lib.print_data(chips)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
