--- a/Jupyter_scripts/Parse_data.ipynb
+++ b/Jupyter_scripts/Parse_data.ipynb
@@ -139,7 +139,7 @@
     "matplotlib.rcParams.update({'font.size': 18})\n",
     "\n",
     "plot_response(top, 30)\n",
-    "plt.xlabel('Chanel')\n",
+    "plt.xlabel('Channel')\n",
     "plt.ylabel('Counts')\n",
     "plt.grid(color='grey', linestyle='-')"
    ]
